@@ -3,130 +3,97 @@ package biz.gss;
 import java.lang.management.ManagementFactory;
 import java.lang.management.MemoryMXBean;
 import java.lang.management.MemoryUsage;
+import java.time.Duration;
+import java.time.Instant;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.concurrent.CountDownLatch;
 
 import com.sun.management.OperatingSystemMXBean;
+import lombok.extern.slf4j.Slf4j;
 
+@Slf4j
 public class ThreadMemoryDemo {
 
-    private static final int THREAD_COUNT = 150_000;
+    private static final int THREAD_COUNT = 100_000;
     private static final int HOLD_MILLIS = 5_000; // how long to keep threads alive after release
 
     public static void main(String[] args) throws Exception {
-        System.out.println("Java version: " + System.getProperty("java.version"));
-        System.out.println("THREAD_COUNT = " + THREAD_COUNT);
-        System.out.println("================================================");
+        log.info("Java version: " + System.getProperty("java.version"));
+        log.info("THREAD_COUNT = " + THREAD_COUNT);
+        log.info("================================================");
 
         logAll("START (before anything)");
+        runThreadsTest("PLATFORM");
 
-        runPlatformThreadsTest();
-
-        System.out.println("================================================");
-        Thread.sleep(2_000); // small pause between tests
-        System.gc();
-        Thread.sleep(2_000);
         logAll("AFTER GC / BEFORE VIRTUAL");
+        runThreadsTest("VIRTUAL");
 
-        runVirtualThreadsTest();
-
-        System.out.println("================================================");
-        Thread.sleep(2_000);
-        System.gc();
-        Thread.sleep(2_000);
         logAll("END");
     }
 
     // ---------------------------------------------------------------
     // Platform threads
     // ---------------------------------------------------------------
-    private static void runPlatformThreadsTest() throws Exception {
-        System.out.println("\n=== PLATFORM THREADS TEST ===");
-        logAll("Platform BEFORE creating threads");
+    private static void runThreadsTest(String type) throws Exception {
+        Instant start = Instant.now();
+        log.info("\n=== " + type + " THREADS TEST ===");
+        logAll(type + " BEFORE creating threads");
 
         CountDownLatch latch = new CountDownLatch(1);
         List<Thread> threads = new ArrayList<>(THREAD_COUNT);
 
         for (int i = 0; i < THREAD_COUNT; i++) {
-            Thread t = new Thread(() -> {
-                try {
-                    // Wait until we release them
-                    latch.await();
-                    // Keep thread alive a bit after release so OS keeps stacks allocated
-                    Thread.sleep(HOLD_MILLIS);
-                } catch (InterruptedException e) {
-                    Thread.currentThread().interrupt();
-                }
-            }, "platform-" + i);
+            Thread t = (type=="PLATFORM") ? new Thread(getRunnable(latch), "platform-" + i)
+                                          :Thread.ofVirtual().unstarted(getRunnable(latch));
             t.start();
             threads.add(t);
         }
 
-        logAll("Platform AFTER creating " + THREAD_COUNT + " threads (before release)");
+        logAll(type + " AFTER creating " + THREAD_COUNT + " threads (before release)");
 
         // Let threads run / sleep
         latch.countDown();
-        System.out.println("Platform: latch released, threads are now sleeping for " + HOLD_MILLIS + " ms");
+        log.info(type + " latch released, threads are now sleeping for " + HOLD_MILLIS + " ms");
         Thread.sleep(2_000);
-        logAll("Platform DURING threads running");
+        logAll(type + " DURING threads running");
 
         // Wait for all to finish
         for (Thread t : threads) {
             t.join();
         }
-        System.out.println("Platform: all threads joined.");
+        log.info(type + " all threads joined.");
 
         System.gc();
         Thread.sleep(2_000);
-        logAll("Platform AFTER threads finished + GC");
-    }
-
-    // ---------------------------------------------------------------
-    // Virtual threads
-    // ---------------------------------------------------------------
-    private static void runVirtualThreadsTest() throws Exception {
-        System.out.println("\n=== VIRTUAL THREADS TEST ===");
-        logAll("Virtual BEFORE creating threads");
-
-        CountDownLatch latch = new CountDownLatch(1);
-        List<Thread> threads = new ArrayList<>(THREAD_COUNT);
-
-        for (int i = 0; i < THREAD_COUNT; i++) {
-            Thread t = Thread.ofVirtual().unstarted(() -> {
-                try {
-                    latch.await();
-                    Thread.sleep(HOLD_MILLIS);
-                } catch (InterruptedException e) {
-                    Thread.currentThread().interrupt();
-                }
-            });
-            t.start();
-            threads.add(t);
-        }
-
-        logAll("Virtual AFTER creating " + THREAD_COUNT + " virtual threads (before release)");
-
-        latch.countDown();
-        System.out.println("Virtual: latch released, virtual threads are now sleeping for " + HOLD_MILLIS + " ms");
-        Thread.sleep(2_000);
-        logAll("Virtual DURING threads running");
-
-        for (Thread t : threads) {
-            t.join();
-        }
-        System.out.println("Virtual: all threads joined.");
-
+        logAll(type + "AFTER threads finished + GC");
+        Instant end = Instant.now();
+        Duration duration = Duration.between(start, end);
+        log.info("threads TOTAL TIME:  {} s", duration.toMillis() / 1000);
+        log.info("================================================");
+        Thread.sleep(2_000); // small pause between tests
         System.gc();
-        Thread.sleep(2_000);
-        logAll("Virtual AFTER threads finished + GC");
     }
+
+    private static Runnable getRunnable(CountDownLatch latch) {
+        return () -> {
+            try {
+                // Wait until we release them
+                latch.await();
+                // Keep thread alive a bit after release so OS keeps stacks allocated
+                Thread.sleep(HOLD_MILLIS);
+            } catch (InterruptedException e) {
+                Thread.currentThread().interrupt();
+            }
+        };
+    }
+
 
     // ---------------------------------------------------------------
     // Logging helpers
     // ---------------------------------------------------------------
     private static void logAll(String label) {
-        System.out.println("\n--- " + label + " ---");
+        log.info("\n--- " + label + " ---");
         logHeap();
         logOSMemory();
         logThreadCount();
@@ -140,8 +107,7 @@ public class ThreadMemoryDemo {
         long committed = heap.getCommitted() / (1024 * 1024);
         long max = heap.getMax() / (1024 * 1024);
 
-        System.out.printf("Heap: used=%d MB, committed=%d MB, max=%d MB%n",
-                used, committed, max);
+        System.out.printf("Heap: used=%d MB, committed=%d MB, max=%d MB%n", used, committed, max);
     }
 
     private static void logOSMemory() {
